--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>AVIS MANAGEMENT</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
@@ -87,6 +87,9 @@
     					</div>
     				</div>
     			</div>
+          <div class="col-md-7 col-md-offset-3">
+            <img src="/public/css/images/avis-logo.png" class="img-responsive" alt="logo">
+          </div>
     		</div>
     	</div>
  <!-- /container -->
