--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -33,6 +33,9 @@
 
 
   <body>
+    <div class = "text-center">
+    <h1>Administration</h1>
+    </div>
     <div class="container">
         	<div class="row">
     			<div class="col-md-6 col-md-offset-3">
