--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,8 +3,10 @@
 <html>
 <head>
 	<title>AVIS MANAGEMENT</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+	<link rel="stylesheet" href="../public/css/vendor/bootstrap.min.css"> <!-- load bootstrap css -->
+	<link rel="stylesheet" href="../public/css/flat-ui.css"> <!-- load flat-ui -->
+	<link rel="stylesheet" href="../public/css/demo.css"> <!-- load flat-ui -->
+
 
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -34,6 +36,8 @@
 	<li role="presentation"><a href="/logout">Déconnexion</a></li>
 </head>
 <body>
+
+<div class="demo-headline">
 <div class="container">
 
 <div class="col-sm-6 col-sm-offset-3">
@@ -57,8 +61,14 @@
 		</div>
 
 		<div class="form-group">
-			<label>Privilège</label>
-			<input type="text" class="form-control" name="attribut">
+
+			<select name="attribut" class="form-control select select-primary" data-toggle="select">
+				  <option value="0" selected>Choisir type de privilège</option>
+					<option value="administrateur">Administrateur</option>
+					<option value="opérateur">Opérateur</option>
+					<option value="utilisateur">Utilisateur</option>
+			</select>
+
 		</div>
 
 		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
@@ -67,6 +77,8 @@
 </div>
 
 </div>
+</div>
+
 </body>
 
 </script>
