--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,9 +3,10 @@
 <html>
 <head>
 	<title>AVIS MANAGEMENT</title>
-	<link rel="stylesheet" href="../public/css/vendor/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="../public/css/flat-ui.css"> <!-- load flat-ui -->
-	<link rel="stylesheet" href="../public/css/demo.css"> <!-- load flat-ui -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+
+
 
 
 	<!-- Latest compiled and minified CSS -->
@@ -57,7 +58,7 @@
 		</div>
 		<div class="form-group">
 			<label>Mot de passe</label>
-			<input type="password" class="form-control" name="password">
+			<input type="password" class="form -control" name="password">
 		</div>
 
 		<div class="form-group">
