--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,7 +20,7 @@
 	<div class="btn-group btn-group-justified">
     <a href="/fvehicule" class="btn btn-primary">Réception Véhicule</a>
     <a href="#" class="btn btn-primary">Check in</a>
-    <a href="#" class="btn btn-primary">Préparation f44</a>
+    <a href="/f44" class="btn btn-primary">Préparation f44</a>
 	</div>
 
 </div>
