--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -40,7 +40,8 @@
 
             <div class='form-group'>
                   <input type='date' class="form-control" id='date' placeholder="Date Opération">
-                  <label for="date" class="glyphicon glyphicon-calendar" rel="tooltip" title="date"></label>
+                      <span class=" glyphicon glyphicon-calendar"></span>
+                  </span>
             </div>
 
             <select name="carburant" class="form-group form-control select select-primary" data-toggle="select">
