--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,7 +13,7 @@
 <div class="container">
 
 	<div class="page-header text-center">
-		<h1><span class="fa fa-anchor"></span> Profile Page</h1>
+		<h1><span class="fa fa-user"></span> Accueil Profil Utilisateur</h1>
 		<a href="/logout" class="btn btn-default btn-sm">Déconnexion</a>
 	</div>
 
