--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -6,13 +6,24 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<style>
 		body
-    { padding-top:80px;
+    { padding-top:0px;
       word-wrap:break-word;
     }
 	</style>
 
 </head>
 <body>
+
+	<div class="panel-footer">
+		<div class="row">
+			<div class="col-md-6 previous">
+					<button type="button" class="btn btn-default btn-lg" onClick="history.go(-1);return true;">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					</button>
+			</div>
+		</div>
+	</div>
+
   <div class="container">
   <div class="col-md-4 col-md-offset-4">
       <div class="form-area">
