--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -8,7 +8,11 @@
 		body
     { padding-top:0px;
       word-wrap:break-word;
-    }
+			#radioBtn .notActive{
+			color: #3276b1;
+			background-color: #fff;
+			}
+		}
 	</style>
 
 </head>
@@ -25,7 +29,7 @@
 	</div>
 
   <div class="container">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-5 col-md-offset-4">
       <div class="form-area">
           <form role="form">
           <br style="clear:both">
@@ -41,38 +45,122 @@
             <input type="text" class="form-control" id="name" name="name" placeholder="Nom opérateur" required>
           </div>
 
-          <ul id="check-list-box" class="list-group checked-list-box">
-            <li class="list-group-item" data-color="success">Dapibus ac facilisis in</li>
-            <li class="list-group-item" data-color="info">Morbi leo risus</li>
-            <li class="list-group-item" data-color="warning">Porta ac consectetur ac</li>
-            <li class="list-group-item" data-color="danger">Vestibulum at eros</li>
-          </ul>
 					<div class="form-group">
-					            <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
-					            <div class="btn-group ">
-					                <label for="fancy-checkbox-primary" class="btn btn-primary">
-					                    <span class="glyphicon glyphicon-ok"></span>
-					                    <span> </span>
-					                </label>
-					                <label for="fancy-checkbox-primary" class="btn btn-default active">
-					                    Primary Checkbox
-					                </label>
-					            </div>
+					    		<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Aspiration intérieur</label>
+					    		<div class="col-sm-8 col-md-8">
+					    			<div class="input-group">
+					    				<div id="radioBtn" class="btn-group">
+					    					<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+					    					<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+					    				</div>
+					    				<input type="hidden" name="happy" id="happy">
+					    			</div>
+					    		</div>
 					</div>
 
 					<div class="form-group">
-											<input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
-											<div class="btn-group ">
-													<label for="fancy-checkbox-primary" class="btn btn-primary">
-															<span class="glyphicon glyphicon-ok"></span>
-															<span> </span>
-													</label>
-													<label for="fancy-checkbox-primary" class="btn btn-default active">
-															Primary Checkbox
-													</label>
+									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Lavage extérieur</label>
+									<div class="col-sm-8 col-md-8">
+										<div class="input-group">
+											<div id="radioBtn" class="btn-group">
+												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
 											</div>
+											<input type="hidden" name="happy" id="happy">
+										</div>
+									</div>
 					</div>
 
+					<div class="form-group">
+									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Nettoyage vitre</label>
+									<div class="col-sm-8 col-md-8">
+										<div class="input-group">
+											<div id="radioBtn" class="btn-group">
+												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+											</div>
+											<input type="hidden" name="happy" id="happy">
+										</div>
+									</div>
+					</div>
+
+					<div class="form-group">
+									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Nettoyage Pare-Brise intérieur</label>
+									<div class="col-sm-8 col-md-8">
+										<div class="input-group">
+											<div id="radioBtn" class="btn-group">
+												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+											</div>
+											<input type="hidden" name="happy" id="happy">
+										</div>
+									</div>
+					</div>
+
+					<div class="form-group">
+									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Niveau huile</label>
+									<div class="col-sm-8 col-md-8">
+										<div class="input-group">
+											<div id="radioBtn" class="btn-group">
+												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+											</div>
+											<input type="hidden" name="happy" id="happy">
+										</div>
+									</div>
+					</div>
+
+					<div class="form-group">
+									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Niveau lave-glace</label>
+									<div class="col-sm-8 col-md-8">
+										<div class="input-group">
+											<div id="radioBtn" class="btn-group">
+												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+											</div>
+											<input type="hidden" name="happy" id="happy">
+										</div>
+									</div>
+					</div>
+
+					<div class="form-group">
+					    		<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Pression pneus</label>
+									<div class="col-sm-8 col-md-8">
+					    			<div class="input-group">
+					    				<div id="radioBtn" class="btn-group">
+					    					<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+					    					<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+					    				</div>
+					    				<input type="hidden" name="happy" id="happy">
+					    			</div>
+					    		</div>
+					</div>
+
+					<div class="form-group">
+									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Contrôle carosserie</label>
+									<div class="col-sm-8 col-md-8">
+										<div class="input-group">
+											<div id="radioBtn" class="btn-group">
+												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+											</div>
+											<input type="hidden" name="happy" id="happy">
+										</div>
+									</div>
+					</div>
+
+					<div class="form-group">
+					    		<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Contrôle intérieur</label>
+									<div class="col-sm-8 col-md-8">
+					    			<div class="input-group">
+					    				<div id="radioBtn" class="btn-group">
+					    					<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
+					    					<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
+					    				</div>
+					    				<input type="hidden" name="happy" id="happy">
+					    			</div>
+					    		</div>
+					</div>
 
           <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
           </form>
@@ -81,6 +169,15 @@
   </div>
 
 
+	<script type="text/javascript"> $('#radioBtn a').on('click', function(){
+    var sel = $(this).data('title');
+    var tog = $(this).data('toggle');
+    $('#'+tog).prop('value', sel);
+
+    $('a[data-toggle="'+tog+'"]').not('[data-title="'+sel+'"]').removeClass('active').addClass('notActive');
+    $('a[data-toggle="'+tog+'"][data-title="'+sel+'"]').removeClass('notActive').addClass('active');
+		})
+	</script>
 
 </body>
 </html>
