--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -42,6 +42,15 @@
 				<td> <%=vehicules.IMMAT%></td>
 				<td> <%=vehicules.STATUT%></td>
 				<td> <%=vehicules.nom_agence%></td>
+				<td>
+					<button type="button" class="btn btn-default btn-lg">
+  					<span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editer
+					</button>
+					<button type="button" class="btn btn-default btn-lg">
+						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Supprimer
+					</button>
+				</td>
+
 
 			</tr>
 			<%})%>
