--- a/views/vehicule.ejs
+++ b/views/vehicule.ejs
@@ -1,50 +1,72 @@
-<!-- views/admin.ejs -->
 <!doctype html>
 <html>
 <head>
-	<title>ADMIN PAGE</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+	<title>AVIS MANAGEMENT</title>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<style>
-		body.container 		{
-
-		padding-top:80px;
-
-		}
+		body
+    { padding-top:0px;
+      word-wrap:break-word;
+    }
 	</style>
 
-	<ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="/signup">Créer compte</a></li>
-  <li role="presentation"><a href="/comptes">Gérer Compte</a></li>
-  <li role="presentation"><a href="/vehicules">Véhicule</a></li>
-  <li role="presentation"><a href="/logout">Déconnexion</a></li>
-
-	</ul>
 </head>
 <body>
 
-    <div class="container">
+	<div class="panel-footer">
+		<div class="row">
+			<div class="col-md-6 previous">
+					<button type="button" class="btn btn-default btn-lg" onClick="history.go(-1);return true;">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					</button>
+			</div>
+		</div>
+	</div>
 
-      <table class = "table table-hover table-bordered">
-        <tr>
-        <th>MVA</th>
-        <th>Immatriculation</th>
-        <th>Statut</th>
-        <th>Nom agence</th>
+  <div class="container">
+  <div class="col-md-4 col-md-offset-4">
+      <div class="form-area">
+          <form role="form">
+          <br style="clear:both">
+                      <h1 style="margin-bottom: 25px; text-align: center;">Véhicule</h1>
 
-      </tr>
-      <% rowsv.forEach(function(vehicules){ %>
-          <tr>
-            <td> <%=vehicules.MVA%></td>
-            <td> <%=vehicules.IMMAT%></td>
-            <td> <%=vehicules.STATUT%></td>
-            <td> <%=vehicules.nom_agence%></td>
+  					<div class="form-group text-center">
+							<h3> MVA <span class="label label-default"><%=rowsv.MVA%></span></h3>
+						</div>
 
-          </tr>
-          <%})%>
-      </table>
+  					<div class="form-group">
+  						<input type="text" class="form-control" id="immat" name="immat" placeholder="Immatriculation" required>
+  					</div>
+  					<div class="form-group">
+  						<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
+  					</div>
+            <div class="form-group">
+              <input type="number" class="form-control" id="num_contrat" name="num_contrat" placeholder="Numéro Contrat">
+            </div>
+            <div class="form-group">
+              <input type="number" class="form-control" id="km" name="km" placeholder="Km" required>
+            </div>
+
+            <div class='form-group'>
+                  <input type='date' class="form-control" id='date' placeholder="Date Opération">
+                      <span class=" glyphicon glyphicon-calendar"></span>
+                  </span>
+            </div>
+
+            <select name="carburant" class="form-group form-control select select-primary" data-toggle="select">
+                <option value="0" selected>Choisir le type de carburant</option>
+                <option value="essence">Essence</option>
+                <option value="diesel">Diesel</option>
+            </select>
+
+          <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
+          </form>
+      </div>
+  </div>
+  </div>
 
 
-    </div>
+
 </body>
 </html>
