--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 
 	<style>
 		body 		{ padding-top:80px; word-wrap:break-word; }
@@ -21,7 +23,7 @@
 
 	<div class="btn-group btn-group-justified">
     <a href="/fvehicule" class="btn btn-primary">Réception Véhicule</a>
-    <a href="#" class="btn btn-primary">Check in</a>
+    <a href="/checkin" class="btn btn-primary">Check in</a>
     <a href="/f44" class="btn btn-primary">Préparation f44</a>
 	</div>
 
@@ -65,7 +67,7 @@
 	    <div class="modal-content">
 	          <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading">Edit Your Detail</h4>
+	        <h4 class="modal-title custom_align" id="Heading">Éditer le véhicule</h4>
 	      </div>
 	          <div class="modal-body">
 	          <div class="form-group">
@@ -97,28 +99,25 @@
 	    <div class="modal-content">
 	          <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading">Delete this entry</h4>
+	        <h4 class="modal-title custom_align" id="Heading">Supprimer ce véhicule</h4>
 	      </div>
 	          <div class="modal-body">
 
-	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Are you sure you want to delete this Record?</div>
+	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Êtes-vous sûr de vouloir supprimer ce véhicule ?</div>
 
 	      </div>
 	        <div class="modal-footer ">
 	        <button type="button" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
 	        <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
 	      </div>
-	        </div>
+			</div>
 	    <!-- /.modal-content -->
-	  </div>
+	  	</div>
 	      <!-- /.modal-dialog -->
-	    </div>
+		</div>
 
 </div>
 
-	<script type="text/javascript">
-
-	</script>
 
 </body>
 </html>
