--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<title> Locanor  </title>
+	<link rel="SHORTCUT ICON" href="/images/favicon.ico" />
+
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -12,6 +14,7 @@
 	</style>
 </head>
 <body>
+
 <!--####-.-.-.-NAV_BAR-.-.-.-.-#########################################################-->
 
 <nav class="navbar navbar-inverse">
@@ -93,7 +96,7 @@
       <ul class="nav navbar-nav navbar-right">
 				<!--######-.-.-.-MON COMPTE -.-.-.-.###################################################################-->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte</h3> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h2><span class="fa fa-user"></span> Mon Compte</h2> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/logout">Se Deconnecter</a></li>
 
