--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -155,24 +155,24 @@
 	    <div class="modal-content">
 	          <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading">Edit Your Detail</h4>
+	        <h4 class="modal-title custom_align" id="Heading">Modifier les éléments d'un véhicule </h4>
 	      </div>
 	          <div class="modal-body">
 	          <div class="form-group">
-	        <input class="form-control " type="text" placeholder="Mohsin">
+	        <input class="form-control " type="text" placeholder="MVA">
 	        </div>
 	        <div class="form-group">
 
-	        <input class="form-control " type="text" placeholder="Irshad">
+	        <input class="form-control " type="text" placeholder="Agence">
 	        </div>
 	        <div class="form-group">
-	        <textarea rows="2" class="form-control" placeholder="CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan"></textarea>
+	        <textarea rows="2" class="form-control" placeholder="Commentaire : "></textarea>
 
 
 	        </div>
 	      </div>
 	          <div class="modal-footer ">
-	        <button type="button" class="btn btn-warning btn-lg" style="width: 100%;"><span class="glyphicon glyphicon-ok-sign"></span> Update</button>
+	        <button type="button" class="btn btn-warning btn-lg" style="width: 100%;"><span class="glyphicon glyphicon-ok-sign"></span> Mettre à jour </button>
 	      </div>
 	        </div>
 	    <!-- /.modal-content -->
@@ -187,11 +187,11 @@
 	    <div class="modal-content">
 	          <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading">Delete this entry</h4>
+	        <h4 class="modal-title custom_align" id="Heading"> Supprimer cette entrée </h4>
 	      </div>
 	          <div class="modal-body">
 
-	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Are you sure you want to delete this Record?</div>
+	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Etes-vous sûr de vouloir supprimer ce véhicule (ou cette tâche, info etc...) </div>
 
 	      </div>
 	        <div class="modal-footer ">
