--- a/typeahead_ajax/views/index.ejs
+++ b/typeahead_ajax/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title> TypeHead, à finir </title>
+  <title> TypeHead, finit </title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script  type="text/javascript" src="typeahead.min.js"></script>
   <script type="text/javascript">
