--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -6,7 +6,18 @@
 
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+  <script  type="text/javascript" src="typeahead.min.js"></script>
+  <script type="text/javascript">
+	$(document).ready(function(){
+			$('#myimmat').typeahead({
+					name: 'immat',
+					remote: 'http://localhost:8080/search?key=%QUERY',
+					limit: 10
+			});
+	});
+  </script>
 
 	<style>
 		body 		{
@@ -124,11 +135,14 @@
 					</div>
 
   					<div class="form-group">
+							<input id="myimmat" type="number" class="typeahead tt-query"  name="immat" placeholder="IMMAT" required>
+							<br>
   						<input type="number" class="form-control" id="mva" name="mva" placeholder="MVA" required>
-  					</div>
-  					<div class="form-group">
-  						<input type="text" class="form-control" id="immat" name="immat" placeholder="Immatriculation" required>
-  					</div>
+					 </div>
+  					<!--div class="form-group">
+							<input type="text" name="typeahead" class="typeahead tt-query" autocomplete="off" spellcheck="false" placeholder="tapez l'immat">
+
+  					</div-->
             <div class="form-group">
             <input type="text" class="form-control" id="name" name="name" placeholder="Nom opérateur" required>
           </div>
@@ -268,7 +282,7 @@
 	</script>
 
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>	<script type="text/javascript">
 
 	</script>
