contact admin mailto and admin view changed

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -103,7 +103,7 @@
             <li><a href="/logout">Se Deconnecter</a></li>
 
             <li role="separator" class="divider"></li>
-            <li><a href="#">Contacter l'administrateur</a></li>
+            <li><a href="mailto:email@admin.fr">Contacter l'administrateur</a></li>
           </ul>
         </li>
       </ul>
