minor updates administration

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -49,6 +49,7 @@
             <li><a href="#">Liste des vehicules</a></li>
 						<li role="separator" class="divider"></li>
             <li><a href="#">Recupérer</a></li>
+						<li role="separator" class="divider"></li>
             <li><a href="#">Transférer</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">À préparer</a></li>
@@ -63,6 +64,7 @@
 					<li><a href="/f44"> Préparer </a></li>
 					<li role="separator" class="divider"></li>
 					<li><a href="/fvehicule"> Réception </a></li>
+					<li role="separator" class="divider"></li>
 					<li><a href="#"> Check-in</a></li>
 					<li role="separator" class="divider"></li>
 					<li><a href="#"> Tâches assignées </a></li>
@@ -98,12 +100,12 @@
       <ul class="nav navbar-nav navbar-right">
 				<!--######-.-.-.-MON COMPTE -.-.-.-.###################################################################-->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte</h3> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte <span class="caret"></span></h3></a>
           <ul class="dropdown-menu">
-            <li><a href="/logout">Se Deconnecter</a></li>
+            <li><a href="/admin/signup">Gérer les utilisateurs</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="/logout">Se Deconnecter</a></li>
 
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Contacter l'administrateur</a></li>
           </ul>
         </li>
       </ul>
