forgot password update

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,6 +38,10 @@
                     <input type="checkbox" class="" name="remember" value="yes">
                 </div>
 
+								<div class="form-group">
+										<a href="mailto:email@admin.fr">Mot de Passe oublié ?</a>
+								</div>
+
                 <button type="submit" class="btn btn-warning btn-lg">Se connecter</button>
             </form>
 
