--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -6,32 +6,35 @@
 
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-
-
-	<!--Scripts à mettre dans un footer éventuellement, pour optimiser le chargement-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>	<script type="text/javascript"></script>
 
+
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script>
+  $(function() {
+    $( "#datepicker" ).datepicker();
+  });
+  </script>
 
 	<style>
 		body 		{
-		background-image:url(/images/bg.jpg);
-
-    background-attachment: fixed;}
+		background-image:url(/images/bg.jpg);background-size:100% auto;}
 
 	</style>
 </head>
 
 <body>
 
-<!--####-.-.-.-NAV_BAR-.-.-.-.-#########################################################-->
+	<!--####-.-.-.-NAV_BAR-.-.-.-.-#########################################################-->
 
 	<nav class="navbar navbar-inverse">
 	  <div class="container-fluid">
 	    <!-- display image -->
 	    <div class="navbar-header">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand">
 	        <img alt="Brand" src="/images/logo.jpg">
 	      </a>
 
@@ -47,8 +50,10 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
+	        <!--li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">Link</a></li-->
 
-						<!--######-.-.-.-Véhicules-.-.-.-###################################################################-->
+					<!--######-.-.-.-Véhicules-.-.-.-###################################################################-->
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="fa fa-road"></span>  Vehicule <span class="caret"></span></h3></a>
 	          <ul class="dropdown-menu">
@@ -71,7 +76,7 @@
 						<li role="separator" class="divider"></li>
 						<li><a href="/fvehicule"> Réception </a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#"> Check-in</a></li>
+						<li><a href="/f44"> Check-in</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#"> Tâches assignées </a></li>
 					</ul>
@@ -106,12 +111,13 @@
 	      <ul class="nav navbar-nav navbar-right">
 					<!--######-.-.-.-MON COMPTE -.-.-.-.###################################################################-->
 	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte</h3> <span class="caret"></span></a>
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte <span class="caret"></span></h3></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="/logout">Se Deconnecter</a></li>
 
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Contacter l'administrateur</a></li>
+	            <li><a href="mailto:email@admin.fr">Contacter l'administrateur</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="/logout">Se Déconnecter</a></li>
+
 	          </ul>
 	        </li>
 	      </ul>
@@ -119,4 +125,71 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-<!--#######-.-.-.-.-.-FIN NAV BAR -.-.-.-.-######################################################-->
+	<!--#######-.-.-.-.-.-FIN NAV BAR -.-.-.-.-######################################################-->
+
+
+  <div class="container">
+  <div class="col-md-4 col-md-offset-4">
+      <div class="form-area">
+          <form role="form">
+          <br>
+					<div class="text-center">
+						<h2><span class="glyphicon glyphicon-refresh"></span> Réception véhicule </h2>
+						<br>
+
+					</div>
+
+      				<div class="form-group">
+  						<input type="text" class="form-control" id="name" name="name" placeholder="Name" value=<%=user.username%> required>
+  					</div>
+  					<div class="form-group">
+  						<input type="number" class="form-control" id="mva" name="mva" placeholder="MVA" required>
+  					</div>
+  					<div class="form-group">
+  						<input type="text" class="form-control" id="immat" name="immat" placeholder="Immatriculation" required>
+  					</div>
+  					<div class="form-group">
+  						<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
+  					</div>
+            <div class="form-group">
+              <input type="number" class="form-control" id="num_contrat" name="num_contrat" placeholder="Numéro Contrat">
+            </div>
+            <div class="form-group">
+              <input type="number" class="form-control" id="km" name="km" placeholder="Km" required>
+            </div>
+
+            <div class='form-group'>
+							<span class=" glyphicon glyphicon-calendar"></span><input type='date' class="form-control" id='date' placeholder="Date Opération">
+            </div>
+
+            <div class='form-group'>
+            <input type="text" size="10" value="" id="date-pick"/>
+            </div>
+
+            <select name="carburant" class="form-group form-control select select-primary" data-toggle="select">
+                <option value="0" selected>Choisir le type de carburant</option>
+                <option value="g1">G1</option>
+                <option value="g2">G2</option>
+								<option value="g3">G3</option>
+								<option value="g4">G4</option>
+								<option value="g5">G5</option>
+								<option value="g6">G6</option>
+								<option value="g7">G7</option>
+								<option value="g8">G8</option>
+
+            </select>
+
+          <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
+          </form>
+      </div>
+  </div>
+  </div>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+
+	</script>
+
+</body>
+</html>
