--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -13,9 +13,23 @@
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <link rel="stylesheet" href="/resources/demos/style.css">
+
   <script>
   $(function() {
-    $( "#datepicker" ).datepicker();
+  $( "#datepicker" ).datepicker({
+  altField: "#datepicker",
+  closeText: 'Fermer',
+  prevText: 'Précédent',
+  nextText: 'Suivant',
+  currentText: 'Aujourd\'hui',
+  monthNames: ['Janvier', 'Février', 'Mars', 'Avril', 'Mai', 'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre', 'Novembre', 'Décembre'],
+  monthNamesShort: ['Janv.', 'Févr.', 'Mars', 'Avril', 'Mai', 'Juin', 'Juil.', 'Août', 'Sept.', 'Oct.', 'Nov.', 'Déc.'],
+  dayNames: ['Dimanche', 'Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi'],
+  dayNamesShort: ['Dim.', 'Lun.', 'Mar.', 'Mer.', 'Jeu.', 'Ven.', 'Sam.'],
+  dayNamesMin: ['D', 'L', 'M', 'M', 'J', 'V', 'S'],
+  weekHeader: 'Sem.',
+  dateFormat: 'yy-mm-dd'
+  });
   });
   </script>
 
@@ -116,7 +130,7 @@
 
 	            <li><a href="mailto:email@admin.fr">Contacter l'administrateur</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="/logout">Se Déconnecter</a></li>
+							<li><a href="/logout">Se Décon"necter</a></li>
 
 	          </ul>
 	        </li>
