carburant and datepicker updating

--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -151,8 +151,15 @@
 
             <select name="carburant" class="form-group form-control select select-primary" data-toggle="select">
                 <option value="0" selected>Choisir le type de carburant</option>
-                <option value="essence">Essence</option>
-                <option value="diesel">Diesel</option>
+								<option value="g1">G0</option>
+								<option value="g1">G1</option>
+                <option value="g2">G2</option>
+								<option value="g3">G3</option>
+								<option value="g4">G4</option>
+								<option value="g5">G5</option>
+								<option value="g6">G6</option>
+								<option value="g7">G7</option>
+								<option value="g8">G8</option>
             </select>
 
           <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
