--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -6,31 +6,16 @@
 
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  <link rel="stylesheet" href="/resources/demos/style.css">
 
   <script>
   $(function() {
-  $( "#datepicker" ).datepicker({
-  altField: "#datepicker",
-  closeText: 'Fermer',
-  prevText: 'Précédent',
-  nextText: 'Suivant',
-  currentText: 'Aujourd\'hui',
-  monthNames: ['Janvier', 'Février', 'Mars', 'Avril', 'Mai', 'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre', 'Novembre', 'Décembre'],
-  monthNamesShort: ['Janv.', 'Févr.', 'Mars', 'Avril', 'Mai', 'Juin', 'Juil.', 'Août', 'Sept.', 'Oct.', 'Nov.', 'Déc.'],
-  dayNames: ['Dimanche', 'Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi'],
-  dayNamesShort: ['Dim.', 'Lun.', 'Mar.', 'Mer.', 'Jeu.', 'Ven.', 'Sam.'],
-  dayNamesMin: ['D', 'L', 'M', 'M', 'J', 'V', 'S'],
-  weekHeader: 'Sem.',
-  dateFormat: 'yy-mm-dd'
-  });
-  });
+      $( "#date-picker" ).datepicker();
+    });
   </script>
 
 	<style>
@@ -173,15 +158,13 @@
             </div>
 
             <div class='form-group'>
-							<span class=" glyphicon glyphicon-calendar"></span><input type='date' class="form-control" id='date' placeholder="Date Opération">
-            </div>
-
-            <div class='form-group'>
-            <input type="text" size="10" value="" id="date-pick"/>
+              <span class=" glyphicon glyphicon-calendar"></span> <input type="text" id="date-picker" placeholder="Date retour">
             </div>
 
             <select name="carburant" class="form-group form-control select select-primary" data-toggle="select">
                 <option value="0" selected>Choisir le type de carburant</option>
+                <option value="g0">G0</option>
+                <option value="g1">G1</option>
                 <option value="g1">G1</option>
                 <option value="g2">G2</option>
 								<option value="g3">G3</option>
@@ -201,9 +184,7 @@
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script type="text/javascript">
 
-	</script>
 
 </body>
 </html>
