--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,8 +8,10 @@
 	<style>
 		body{
 			padding-top:80px;
-			background-repeat:no-repeat;
+			background-attachment: fixed;
+			background-size:100% auto;
 			background-image:url(/images/accueil_background_flou.jpg);
+
 		}
 	</style>
 </head>
