--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -145,7 +145,7 @@
 							</div>
 
 							<div class="form-group">
-								<h3> Contrôle intérieur </h3> 
+								<h3> Contrôle intérieur </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
 										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
@@ -156,8 +156,7 @@
 								</div>
 							</div>
 
-
-          <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
+          <button type="submit" id="bsub" name="submit" class="btn btn-primary pull-right">Envoyer</button>
           </form>
       </div>
   </div>
