--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -22,7 +22,7 @@
   <div class="container">
 	  <div class="col-md-5 col-md-offset-4">
 	      <div class="form-area">
-	          <form role="form">
+	          <form role="form"  action="/data_f44" method="POST" >
 	          <br>
 							<div class="text-center">
 
