--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -52,126 +52,148 @@
 								<h3> Aspiration intérieure </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="aspiration_interieur" value="0" />
 
 							<div class="form-group">
 								<h3> Lavage extérieure </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="lavage_exterieur" value="0" />
 
 							<div class="form-group">
 								<h3> Nettoyage vitre </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="nettoyage_vitre" value="0" />
 
 							<div class="form-group">
 								<h3> Nettoyage parebrise intérieur </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="nettoyage_parebrise_interieur" value="0" />
 
 							<div class="form-group">
 								<h3> Niveau huile </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="niveau_huile" value="0" />
 
 							<div class="form-group">
 								<h3> Niveau lave-glace  </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="niveau_lave_glace" value="0" />
 
 							<div class="form-group">
 								<h3> Pression pneus </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="pression_pneus" value="0" />
 
 							<div class="form-group">
 								<h3> Contrôle carrosserie </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="controle_carosserie" value="0" />
 
 							<div class="form-group">
-								<h3> Contrôle intérieur </h3> 
+								<h3> Contrôle intérieur </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="options" id="option1" autocomplete="off" value ="1"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="options" id="option2" autocomplete="off" value="0" checked> À faire
 									</label>
 								</div>
 							</div>
+							<input type="hidden" name="controle_interieur" value="0" />
 
 
           <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
-          </form>
+					<br>
+			  </form>
       </div>
   </div>
   </div>
 
 
-	<script type="text/javascript"> $('#radioBtn a').on('click', function(){
-    var sel = $(this).data('title');
-    var tog = $(this).data('toggle');
-    $('#'+tog).prop('value', sel);
+	<script type="text/javascript">
 
-    $('a[data-toggle="'+tog+'"]').not('[data-title="'+sel+'"]').removeClass('active').addClass('notActive');
-    $('a[data-toggle="'+tog+'"][data-title="'+sel+'"]').removeClass('notActive').addClass('active');
-		})
+	$(function() {
+    $('div.btn-group[data-toggle-name]').each(function() {
+        var group = $(this);
+        var form = group.parents('form').eq(0);
+        var name = group.attr('data-toggle-name');
+        var hidden = $('input[name="' + name + '"]', form);
+        $('label', group).each(function() {
+            var button = $(this).find('input[type="radio"]');
+            $(this).on('click', function() {
+								console.log(button.val());
+                hidden.val($(this).val());
+            });
+            if (button.val() == hidden.val()) {
+                $(this).addClass('active');
+            }
+        });
+    });
+});
 	</script>
 
 
