--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -88,10 +88,10 @@
 								<h3> Nettoyage parebrise intérieur </h3>
 								<div class="btn-group" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+										<input type="radio" name="nettoyage_parebrise" id="option1" autocomplete="off" checked> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+										<input type="radio" name="tr" id="option2" autocomplete="off"> À faire
 									</label>
 								</div>
 							</div>
