--- a/views/post_data.ejs
+++ b/views/post_data.ejs
@@ -14,15 +14,21 @@ $(document).ready(function(){
         name: 'users',
         remote: 'http://localhost:8080/search_immat?key=%QUERY',
     });
-
-
-    });
-
-
-    $('.typeahead.input-sm').siblings('input.tt-hint').addClass('hint-small');
-    $('.typeahead.input-lg').siblings('input.tt-hint').addClass('hint-large');
-
+  });
+  $('.typeahead.input-sm').siblings('input.tt-hint').addClass('hint-small');
+  $('.typeahead.input-lg').siblings('input.tt-hint').addClass('hint-large');
   </script>
+
+  <script>
+  function updMVA(){
+  $.ajax({
+    url: 'http://localhost:8080/search_mva?key='+$( '#myimmat' ).val()+'',
+    dataType: 'json',
+    success : function (data) {
+      $( '#mva' ).val(data);
+    },
+  })};
+</script>
 
 
 
@@ -121,22 +127,13 @@ $(document).ready(function(){
   					</div>
 
   					<div class="form-group">
-  						<input type="number" class="typeahead form-control" id="mva" name="mva" placeholder="MVA" required>
+  						<input type="number" class="typeahead form-control" id="mva" name="mva" placeholder="MVA"  required>
   					</div>
 
   					<div class="form-group">
 
-              <input type="text" id='myimmat'class="typeahead form-control" placeholder="Immat" />
-              <script>
-              $(function(){
-              $.ajax({
-                url: 'http://localhost:8080/search_mva?key='+$( '#myimmat' ).val()+'',
-                dataType: 'json',
-                success : function (data) {
-                  $( '#mva' ).val(data);
-                },
-              })});
-            </script>
+              <input type="text" id='myimmat'class="typeahead form-control" placeholder="Immat" onkeyup="updMVA()" />
+
   					</div>
 
   					<div class="form-group">
