--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -22,8 +22,8 @@
   <div class="container">
 	  <div class="col-md-5 col-md-offset-4">
 	      <div class="form-area">
-	          <form role="form">
-	          <br>
+					<form role="form"  action="/data_f44" method="POST" >
+		          <br>
 							<div class="text-center">
 
 								<h2><span class="glyphicon glyphicon-refresh"></span> Fiche F44 </h2>
@@ -50,12 +50,12 @@
 
 							<div class="form-group">
 								<h3> Aspiration intérieure </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="aspiration_interieur" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_aspiration_interieur" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_aspiration_interieur2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -63,12 +63,12 @@
 
 							<div class="form-group">
 								<h3> Lavage extérieure </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="lavage_exterieur" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_lavage_exterieur" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_lavage_exterieur2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -76,12 +76,12 @@
 
 							<div class="form-group">
 								<h3> Nettoyage vitre </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="nettoyage_vitre" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_nettoyage_vitre" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_nettoyage_vitre2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -89,12 +89,12 @@
 
 							<div class="form-group">
 								<h3> Nettoyage parebrise intérieur </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="nettoyage_parebrise_interieur" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_nettoyage_parebrise_interieur" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_nettoyage_parebrise_interieur2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -102,12 +102,12 @@
 
 							<div class="form-group">
 								<h3> Niveau huile </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="niveau_huile" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_niveau_huile" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_niveau_huile2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -115,12 +115,12 @@
 
 							<div class="form-group">
 								<h3> Niveau lave-glace  </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="niveau_lave_glace" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_niveau_lave_glace" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_niveau_lave_glace2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -128,12 +128,12 @@
 
 							<div class="form-group">
 								<h3> Pression pneus </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="pression_pneus" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_pression_pneus" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_pression_pneus2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -141,12 +141,12 @@
 
 							<div class="form-group">
 								<h3> Contrôle carrosserie </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group"  data-toggle-name="controle_carosserie" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off"> Ok
+										<input type="radio" name="options" id="id_controle_carosserie" autocomplete="off"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" checked> À faire
+										<input type="radio" name="options" id="id_controle_carosserie2" autocomplete="off" checked> À faire
 									</label>
 								</div>
 							</div>
@@ -154,12 +154,12 @@
 
 							<div class="form-group">
 								<h3> Contrôle intérieur </h3>
-								<div class="btn-group" data-toggle="buttons">
+								<div class="btn-group" data-toggle-name="controle_interieur" data-toggle="buttons">
 									<label class="btn btn-primary active">
-										<input type="radio" name="options" id="option1" autocomplete="off" value ="1"> Ok
+										<input type="radio" name="options" id="id_controle_interieur" autocomplete="off" value ="1"> Ok
 									</label>
 									<label class="btn btn-primary">
-										<input type="radio" name="options" id="option2" autocomplete="off" value="0" checked> À faire
+										<input type="radio" name="options" id="id_controle_interieur2" autocomplete="off" value="0" checked> À faire
 									</label>
 								</div>
 							</div>
